prevent zooming and hide scrollbars

--- a/src/app.css
+++ b/src/app.css
@@ -27,6 +27,11 @@ body {
 	font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen,
 		Ubuntu, Cantarell, sans-serif;
 	-webkit-font-smoothing: antialiased;
+	scrollbar-width: none;
+}
+
+::-webkit-scrollbar {
+	display: none;
 }
 
 body {
